<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_title"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <!-- 设置 在点击 编辑 之后消失 -->
        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/setting_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/setting"
                android:src="@drawable/setting_32" />
        </LinearLayout>

        <!-- 显示该程序名称 记事本 -->
        <LinearLayout
            android:id="@+id/note_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- 编辑Note 自我点击之后 消失 -->
        <LinearLayout
            android:id="@+id/note_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/editnotetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="#FF9900"
                android:textSize="17sp" />
        </LinearLayout>

        <!-- 取消编辑Note 在点击编辑之后出现 自我点击之后 消失 -->
        <LinearLayout
            android:id="@+id/note_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="#FF9900"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_grey" />

</LinearLayout>
