<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- CheckBox 用来判断该记事本条目是否被选中 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <CheckBox
                android:id="@+id/list_item_checkbox"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:visibility="gone" />
        </LinearLayout>

        <!-- 以备忘录第一行作为标题显示 标题下方显示时间 时间右侧显示附加文本 如果没有附加文本 显示“无附加文本” -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="8"
            android:gravity="center|start"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/list_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/title"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/list_item_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_item_title"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/content"
                android:maxLines="1"
                android:textColor="#9999cc" />

            <TextView
                android:id="@+id/list_item_content_extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_item_title"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/list_item_content"
                android:layout_toRightOf="@+id/list_item_content"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/content"
                android:maxLines="1"
                android:textColor="#000000" />
        </RelativeLayout>

        <!-- 显示记事本中的缩略图 无论是视频还是图片，都只选择第一个来显示 图片大小56px -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="0dp">

            <ImageView
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:id="@+id/list_item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/pic"
                android:src="@drawable/delete_72" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
