<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 显示输入密码 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/kb_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/input_password"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kb_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center">


            <ImageView
                android:id="@+id/code_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/circle_outline_20" />

            <ImageView
                android:id="@+id/code_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/circle_outline_20" />

            <ImageView
                android:id="@+id/code_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/circle_outline_20" />

            <ImageView
                android:id="@+id/code_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/circle_outline_20" />
        </LinearLayout>


    </RelativeLayout>

    <!-- 小键盘 -->
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        app:columnCount="3"
        app:rowCount="4">

        <LinearLayout
            android:padding="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="right|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_1" />
        </LinearLayout>

        <LinearLayout
            android:padding="0dp"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_2" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="left|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_3" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="right|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_4" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_5" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="left|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_6" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="right|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_7" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_8" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="left|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_9" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="right|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/number_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@drawable/number_0" />
        </LinearLayout>

        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_gravity="left|center_vertical"
            app:layout_rowWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/notesNumber"
                android:src="@android:color/transparent" />
        </LinearLayout>


    </android.support.v7.widget.GridLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/pwd_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:text="@string/delete"
            android:textColor="#FFF0F5"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>